--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.layout-container {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+}
+
+.list-card {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  min-width: 100%;
+  margin: 8px 0;
+}
