--- a/app/globals.css
+++ b/app/globals.css
@@ -14,3 +14,9 @@
   min-width: 100%;
   margin: 8px 0;
 }
+
+@media screen and (max-width: 768px) {
+  .layout-container {
+    grid-template-columns: 1fr;
+  }
+}
